deploy: 16bedb6a50d8edf2e7f16fbec9c597f9e4d4af9f

--- a/BGVScheme.html
+++ b/BGVScheme.html
@@ -105,7 +105,7 @@ BFV’s.
 <br />   <span class='subsectionToc'>D-4.10 <a href='HomomorphicRotationofInputVectorSlots2.html#homomorphic-rotation-of-input-vector-slots2'>Homomorphic Rotation of Input Vector Slots</a></span>
 <br />   <span class='subsectionToc'>D-4.11 <a href='ModulusBootstrapping1.html#modulus-bootstrapping1'>Modulus Bootstrapping</a></span>
 <br />   <span class='subsubsectionToc'>D-4.11.1     <a href='ModulusBootstrapping1.html#the-reason-for-modulus-switch-from-ql-q'>The     Reason     for     Modulus     Switch     from
-<!-- l. 242 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mi>q</mi></mrow><mrow><mi>l</mi></mrow></msub> <mo class='MathClass-rel' stretchy='false'>→</mo><mover accent='true'><mrow><mi>q</mi></mrow><mo accent='true'>^</mo></mover></mrow></math></a></span>
+<!-- l. 242 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mi>q</mi></mrow><mrow><mi>l</mi></mrow></msub> <mo class='MathClass-rel' stretchy='false'>→</mo><mover accent='true'><mrow><mi>q</mi></mrow><mo accent='true' stretchy='false'>^</mo></mover></mrow></math></a></span>
 <br />   <span class='subsubsectionToc'>D-4.11.2 <a href='ModulusBootstrapping1.html#modraise-instead-of-homomorphic-decryption'><span class='rm-lmss-10x-x-109'>ModRaise </span>instead of Homomorphic Decryption</a></span>
 <br />   <span class='subsubsectionToc'>D-4.11.3                   <a href='ModulusBootstrapping1.html#the-choice-of-'>The                   Choice                   of
 <!-- l. 244 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>𝜀</mi></math></a></span>
