--- a/VectorandMatrix.html
+++ b/VectorandMatrix.html
@@ -24,9 +24,9 @@
 <br />   <span class='subsubsectionToc'>A-10.7.1                       <a href='IsomorphismbetweenPolynomialsandVectorsoverComplexNumbers.html#isomorphism-between-c-n-and-cn'>Isomorphism                       between
 <!-- l. 59 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msup><mrow><mi>ℂ</mi></mrow><mrow><mfrac><mrow><mi>n</mi></mrow>
 <mrow><mn>2</mn></mrow></mfrac> </mrow></msup></math> and
-<!-- l. 59 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msup><mrow><mi>Ĉ</mi></mrow><mrow><mi>n</mi></mrow></msup></math></a></span>
+<!-- l. 59 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msup><mrow><mover accent='true'><mrow><mi>ℂ</mi></mrow><mo accent='true' stretchy='false'>^</mo></mover></mrow><mrow><mi>n</mi></mrow></msup></math></a></span>
 <br />   <span class='subsubsectionToc'>A-10.7.2                       <a href='IsomorphismbetweenPolynomialsandVectorsoverComplexNumbers.html#isomorphism-between-cn-and-rx-xn-'>Isomorphism                       between
-<!-- l. 60 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msup><mrow><mi>Ĉ</mi></mrow><mrow><mi>n</mi></mrow></msup></math> and
+<!-- l. 60 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msup><mrow><mover accent='true'><mrow><mi>ℂ</mi></mrow><mo accent='true' stretchy='false'>^</mo></mover></mrow><mrow><mi>n</mi></mrow></msup></math> and
 <!-- l. 60 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>ℝ</mi><mo class='MathClass-open' stretchy='false'>[</mo><mi>X</mi><mo class='MathClass-close' stretchy='false'>]</mo><mo class='MathClass-bin' stretchy='false'>∕</mo><msup><mrow><mi>X</mi></mrow><mrow><mi>n</mi></mrow></msup> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>1</mn></mrow></math></a></span>
 <br />   <span class='subsectionToc'>A-10.8 <a href='TransformingBasisbetweenPolynomialRingandVectorSpace.html#transforming-basis-between-polynomial-ring-and-vector-space'>Transforming Basis between Polynomial Ring and Vector Space</a></span>
    </div>
