--- a/ContemplationonCKKSEncoding.html
+++ b/ContemplationonCKKSEncoding.html
@@ -63,7 +63,7 @@ matrix (i.e., inverse of the Vandermonde matrix whose roots are the primitive
 <!-- l. 1313 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>(</mo><mi>μ</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mn>2</mn><mi>n</mi><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>-th roots of unity)
 upward by <!-- l. 1313 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>h</mi></math> positions.
 And this vertical rotation of the encoding matrix (while the input vector is fixed) gives the same effect of rotating
-the input vector <!-- l. 1313 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mover accent='true'><mrow><mi>v</mi></mrow><mo accent='true'>→</mo></mover></math>
+the input vector <!-- l. 1313 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mover accent='true'><mrow><mi>v</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></math>
 by <!-- l. 1313 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>h</mi></math>
 positions to the left (without modifying the encoding matrix). Therefore, the
 <!-- l. 1313 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>(</mo><mi>μ</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mn>2</mn><mi>n</mi><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>-th cyclotomic
