--- a/HomomorphicRotationofInputVectorSlots2.html
+++ b/HomomorphicRotationofInputVectorSlots2.html
@@ -23,11 +23,11 @@ Slots</span></p></div>
   <!-- l. 596 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msubsup><mrow><mstyle class='text'><mtext class='textsf' mathvariant='sans-serif'>𝖱𝖫𝖾𝗏</mtext></mstyle></mrow><mrow><mi>S</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mi>σ</mi></mrow><mrow><mi>β</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mi>l</mi></mrow></msubsup><mo class='MathClass-open' stretchy='false'>(</mo><msup><mrow><mi>S</mi></mrow><mrow><mi>J</mi><mo class='MathClass-open' stretchy='false'>(</mo><mi>h</mi><mo class='MathClass-close' stretchy='false'>)</mo></mrow></msup><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>
 </p><!-- l. 598 --><p class='noindent'><!-- l. 598 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
 </p><!-- l. 600 --><p class='noindent'>Then, the procedure of rotating the first-half elements of the ciphertext’s original input vector
-<!-- l. 600 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mover accent='true'><mrow><mi>v</mi></mrow><mo accent='true'>→</mo></mover></math>
+<!-- l. 600 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mover accent='true'><mrow><mi>v</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></math>
 by
 <!-- l. 600 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>h</mi></math>
 positions to the left (in a wrapping manner among them) and the second-half elements of
-<!-- l. 600 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mover accent='true'><mrow><mi>v</mi></mrow><mo accent='true'>→</mo></mover></math>
+<!-- l. 600 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mover accent='true'><mrow><mi>v</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></math>
 by
 <!-- l. 600 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>h</mi></math>
 positions to the left (in a wrapping manner among them) is as follows:
