--- a/contentsname.html
+++ b/contentsname.html
@@ -65,9 +65,9 @@
 <br />   <span class='subsubsectionToc'>A-10.7.1                       <a href='IsomorphismbetweenPolynomialsandVectorsoverComplexNumbers.html#isomorphism-between-c-n-and-cn' id='QQ2-41-58'>Isomorphism                       between
 <!-- l. 59 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msup><mrow><mi>ℂ</mi></mrow><mrow><mfrac><mrow><mi>n</mi></mrow>
 <mrow><mn>2</mn></mrow></mfrac> </mrow></msup></math> and
-<!-- l. 59 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msup><mrow><mi>Ĉ</mi></mrow><mrow><mi>n</mi></mrow></msup></math></a></span>
+<!-- l. 59 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msup><mrow><mover accent='true'><mrow><mi>ℂ</mi></mrow><mo accent='true' stretchy='false'>^</mo></mover></mrow><mrow><mi>n</mi></mrow></msup></math></a></span>
 <br />   <span class='subsubsectionToc'>A-10.7.2                       <a href='IsomorphismbetweenPolynomialsandVectorsoverComplexNumbers.html#isomorphism-between-cn-and-rx-xn-' id='QQ2-41-59'>Isomorphism                       between
-<!-- l. 60 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msup><mrow><mi>Ĉ</mi></mrow><mrow><mi>n</mi></mrow></msup></math> and
+<!-- l. 60 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msup><mrow><mover accent='true'><mrow><mi>ℂ</mi></mrow><mo accent='true' stretchy='false'>^</mo></mover></mrow><mrow><mi>n</mi></mrow></msup></math> and
 <!-- l. 60 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>ℝ</mi><mo class='MathClass-open' stretchy='false'>[</mo><mi>X</mi><mo class='MathClass-close' stretchy='false'>]</mo><mo class='MathClass-bin' stretchy='false'>∕</mo><msup><mrow><mi>X</mi></mrow><mrow><mi>n</mi></mrow></msup> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>1</mn></mrow></math></a></span>
 <br />   <span class='subsectionToc'>A-10.8 <a href='TransformingBasisbetweenPolynomialRingandVectorSpace.html#transforming-basis-between-polynomial-ring-and-vector-space'>Transforming Basis between Polynomial Ring and Vector Space</a></span>
 <br />   <span class='sectionToc'>A-11 <a href='EulersFormula.html#eulers-formula'>Euler’s Formula</a></span>
@@ -246,7 +246,7 @@ Polynomials</a></span>
 <br />   <span class='subsectionToc'>D-4.10 <a href='HomomorphicRotationofInputVectorSlots2.html#homomorphic-rotation-of-input-vector-slots2'>Homomorphic Rotation of Input Vector Slots</a></span>
 <br />   <span class='subsectionToc'>D-4.11 <a href='ModulusBootstrapping1.html#modulus-bootstrapping1'>Modulus Bootstrapping</a></span>
 <br />   <span class='subsubsectionToc'>D-4.11.1     <a href='ModulusBootstrapping1.html#the-reason-for-modulus-switch-from-ql-q' id='QQ2-143-241'>The     Reason     for     Modulus     Switch     from
-<!-- l. 242 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mi>q</mi></mrow><mrow><mi>l</mi></mrow></msub> <mo class='MathClass-rel' stretchy='false'>→</mo><mover accent='true'><mrow><mi>q</mi></mrow><mo accent='true'>^</mo></mover></mrow></math></a></span>
+<!-- l. 242 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mi>q</mi></mrow><mrow><mi>l</mi></mrow></msub> <mo class='MathClass-rel' stretchy='false'>→</mo><mover accent='true'><mrow><mi>q</mi></mrow><mo accent='true' stretchy='false'>^</mo></mover></mrow></math></a></span>
 <br />   <span class='subsubsectionToc'>D-4.11.2 <a href='ModulusBootstrapping1.html#modraise-instead-of-homomorphic-decryption' id='QQ2-143-242'><span class='rm-lmss-10x-x-109'>ModRaise </span>instead of Homomorphic Decryption</a></span>
 <br />   <span class='subsubsectionToc'>D-4.11.3                   <a href='ModulusBootstrapping1.html#the-choice-of-' id='QQ2-143-243'>The                   Choice                   of
 <!-- l. 244 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>𝜀</mi></math></a></span>
