--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ for Fully Homomorphic Encryption</title>
 
 <h2 class='titleHead'>The Beginner’s Textbook<br />
 for Fully Homomorphic Encryption</h2>
-           <div class='author'><br /><br />
+           <div class='author'>
 <br /> <span class='rm-lmr-12'>LG Electronics Inc.</span></div><br />
 <div class='date'><span class='rm-lmr-12'>January 1, 2025</span></div>
    </div>
