--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@ for Fully Homomorphic Encryption</h2>
 <br />   <span class='subsectionToc'>A-11.1 <a href='PythagoreanIdentity.html#pythagorean-identity' id='QQ2-43-62'>Pythagorean Identity</a></span>
 <br />   <span class='subsectionToc'>A-11.2 <a href='ImaginaryNumber.html#imaginary-number' id='QQ2-44-64'>Imaginary Number</a></span>
 <br />   <span class='subsectionToc'>A-11.3 <a href='EulersFormula1.html#eulers-formula1' id='QQ2-45-65'>Euler’s Formula</a></span>
-<br />   <span class='subsectionToc'>A-11.4 <a href='VandermondeMatrixwithRootsofCyclotomicPolynomialoverComplexNumber.html#vandermonde-matrix-with-roots-of-cyclotomic-polynomial-over-complex-number' id='QQ2-46-67'>Vandermonde Matrix with Roots of Cyclotomic Polynomial
-over Complex Number</a></span>
-<br />   <span class='subsectionToc'>A-11.5 <a href='VandermondeMatrixwithRootsofaCyclotomicPolynomialoverIntegerRing.html#vandermonde-matrix-with-roots-of-a-cyclotomic-polynomial-over-integer-ring' id='QQ2-47-68'>Vandermonde Matrix with Roots of a Cyclotomic Polynomial
-over Integer Ring</a></span>
+<br />   <span class='subsectionToc'>A-11.4 <a href='VandermondeMatrixwithRootsofCyclotomicPolynomialoverComplexNumbers.html#vandermonde-matrix-with-roots-of-cyclotomic-polynomial-over-complex-numbers' id='QQ2-46-67'>Vandermonde Matrix with Roots of Cyclotomic Polynomial
+over Complex Numbers</a></span>
+<br />   <span class='subsectionToc'>A-11.5 <a href='VandermondeMatrixwithRootsofaCyclotomicPolynomialoverRingmathbbZp.html#vandermonde-matrix-with-roots-of-a-cyclotomic-polynomial-over-ring-zp' id='QQ2-47-68'>Vandermonde Matrix with Roots of a Cyclotomic Polynomial over
+Ring (<!--  l. 69  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>ℤ</mi></mrow><mrow><mi>p</mi></mrow></msub></math>)</a></span>
 <br />   <span class='sectionToc'>A-12 <a href='ModuloRescaling.html#modulo-rescaling' id='QQ2-48-69'>Modulo Rescaling</a></span>
 <br />   <span class='subsectionToc'>A-12.1 <a href='RescalingModuloofCongruenceRelations.html#rescaling-modulo-of-congruence-relations' id='QQ2-49-70'>Rescaling Modulo of Congruence Relations</a></span>
 <br />   <span class='sectionToc'>A-13 <a href='ChineseRemainderTheorem.html#chinese-remainder-theorem' id='QQ2-50-73'>Chinese Remainder Theorem</a></span>
