--- a/VandermondeMatrixwithRootsofCyclotomicPolynomialoverComplexNumbers.html
+++ b/VandermondeMatrixwithRootsofCyclotomicPolynomialoverComplexNumbers.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html> 
 <html lang='en-US' xml:lang='en-US'> 
-<head><title>Vandermonde Matrix with Roots of Cyclotomic Polynomial over Complex Number</title> 
+<head><title>Vandermonde Matrix with Roots of Cyclotomic Polynomial over Complex Numbers</title> 
 <meta charset='utf-8' /> 
 <meta content='TeX4ht (https://tug.org/tex4ht/)' name='generator' /> 
 <meta content='width=device-width,initial-scale=1' name='viewport' /> 
@@ -8,19 +8,19 @@
 <meta content='index.tex' name='src' /> 
  <script async='async' id='MathJax-script' src='https://cdn.jsdelivr.net/npm/mathjax@3/es5/mml-chtml.js' type='text/javascript'></script>  
 </head><body>
-   <!--  l. 92  --><div class='crosslinks'><p class='noindent'>[<a href='VandermondeMatrixwithRootsofaCyclotomicPolynomialoverIntegerRing.html'>next</a>] [<a href='EulersFormula1.html'>prev</a>] [<a href='EulersFormula1.html#tailEulersFormula1.html'>prev-tail</a>] [<a href='#tailVandermondeMatrixwithRootsofCyclotomicPolynomialoverComplexNumber.html'>tail</a>] [<a href='EulersFormula.html#VandermondeMatrixwithRootsofCyclotomicPolynomialoverComplexNumber.html'>up</a>] </p></div>
-   <h4 class='subsectionHead' id='vandermonde-matrix-with-roots-of-cyclotomic-polynomial-over-complex-number'><span class='titlemark'>A-11.4   </span> <a id='x46-58000A-11.4'></a>Vandermonde Matrix with Roots of Cyclotomic Polynomial over Complex Number</h4>
+   <!--  l. 92  --><div class='crosslinks'><p class='noindent'>[<a href='VandermondeMatrixwithRootsofaCyclotomicPolynomialoverRingmathbbZp.html'>next</a>] [<a href='EulersFormula1.html'>prev</a>] [<a href='EulersFormula1.html#tailEulersFormula1.html'>prev-tail</a>] [<a href='#tailVandermondeMatrixwithRootsofCyclotomicPolynomialoverComplexNumbers.html'>tail</a>] [<a href='EulersFormula.html#VandermondeMatrixwithRootsofCyclotomicPolynomialoverComplexNumbers.html'>up</a>] </p></div>
+   <h4 class='subsectionHead' id='vandermonde-matrix-with-roots-of-cyclotomic-polynomial-over-complex-numbers'><span class='titlemark'>A-11.4   </span> <a id='x46-58000A-11.4'></a>Vandermonde Matrix with Roots of Cyclotomic Polynomial over Complex Numbers</h4>
 <!--  l. 97  --><p class='noindent'>In this subsection, we will build a Vandermonde matrix (<a href='VariousTypesofMatrix.html#various-types-of-matrix'><span class='ts1-lmr10-x-x-109'>§</span>A-10.2<!--  tex4ht:ref: subsec:euler   --></a>) with the
-<!--  l. 97  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>n</mi></math> distinct roots of
-the <!--  l. 97  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>μ</mi></math>-th cyclotomic
-polynomial (where <!--  l. 97  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>μ</mi></math>
+<!--  l. 97  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>n</mi></math> distinct roots of the
+<!--  l. 97  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>μ</mi></math>-th cyclotomic polynomial
+over complex numbers (where <!--  l. 97  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>μ</mi></math>
 is a power of 2) as follows:
 </p>
    <div class='tcolorbox tcolorbox' id='tcolobox-40'>     
 <div class='tcolorbox-title'>
 <!--  l. 118  --><p class='indent'>   <!--  l. 118  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle mathvariant='bold'><mo class='MathClass-open' stretchy='false'>⟨</mo></mstyle></math><span class='rm-lmbx-10x-x-109'>Theorem A-11.4</span><!--  l. 118  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle mathvariant='bold'><mo class='MathClass-close' stretchy='false'>⟩</mo></mstyle></math>
 <span class='rm-lmbx-10x-x-109'>Vandermonde Matrix with the Roots of (power-of-2)-th Cyclotomic Polynomial over Complex
-Number</span></p></div> 
+Numbers</span></p></div> 
 <div class='tcolorbox-content'><!--  l. 103  --><p class='noindent'>Suppose we have an <!--  l. 103  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>n</mi> <mo class='MathClass-bin' stretchy='false'>×</mo><mi>n</mi></mrow></math>
 (where <!--  l. 103  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>n</mi></math>
 is        a        power        of        2)        Vandermonde        matrix        comprised        of
@@ -199,7 +199,7 @@ power of 2:
                                                                                          
                                                                                          
 </p>
-   <!--  l. 234  --><div class='crosslinks'><p class='noindent'>[<a href='VandermondeMatrixwithRootsofaCyclotomicPolynomialoverIntegerRing.html'>next</a>] [<a href='EulersFormula1.html'>prev</a>] [<a href='EulersFormula1.html#tailEulersFormula1.html'>prev-tail</a>] [<a href='VandermondeMatrixwithRootsofCyclotomicPolynomialoverComplexNumber.html'>front</a>] [<a href='EulersFormula.html#VandermondeMatrixwithRootsofCyclotomicPolynomialoverComplexNumber.html'>up</a>] </p></div>
-<!--  l. 234  --><p class='indent'>   <a id='tailVandermondeMatrixwithRootsofCyclotomicPolynomialoverComplexNumber.html'></a> </p> 
+   <!--  l. 234  --><div class='crosslinks'><p class='noindent'>[<a href='VandermondeMatrixwithRootsofaCyclotomicPolynomialoverRingmathbbZp.html'>next</a>] [<a href='EulersFormula1.html'>prev</a>] [<a href='EulersFormula1.html#tailEulersFormula1.html'>prev-tail</a>] [<a href='VandermondeMatrixwithRootsofCyclotomicPolynomialoverComplexNumbers.html'>front</a>] [<a href='EulersFormula.html#VandermondeMatrixwithRootsofCyclotomicPolynomialoverComplexNumbers.html'>up</a>] </p></div>
+<!--  l. 234  --><p class='indent'>   <a id='tailVandermondeMatrixwithRootsofCyclotomicPolynomialoverComplexNumbers.html'></a> </p> 
 </body> 
 </html>
