--- a/contentsname.html
+++ b/contentsname.html
@@ -73,10 +73,10 @@
 <br />   <span class='subsectionToc'>A-11.1 <a href='PythagoreanIdentity.html#pythagorean-identity'>Pythagorean Identity</a></span>
 <br />   <span class='subsectionToc'>A-11.2 <a href='ImaginaryNumber.html#imaginary-number'>Imaginary Number</a></span>
 <br />   <span class='subsectionToc'>A-11.3 <a href='EulersFormula1.html#eulers-formula1'>Euler’s Formula</a></span>
-<br />   <span class='subsectionToc'>A-11.4 <a href='VandermondeMatrixwithRootsofCyclotomicPolynomialoverComplexNumber.html#vandermonde-matrix-with-roots-of-cyclotomic-polynomial-over-complex-number'>Vandermonde Matrix with Roots of Cyclotomic Polynomial
-over Complex Number</a></span>
-<br />   <span class='subsectionToc'>A-11.5 <a href='VandermondeMatrixwithRootsofaCyclotomicPolynomialoverIntegerRing.html#vandermonde-matrix-with-roots-of-a-cyclotomic-polynomial-over-integer-ring'>Vandermonde Matrix with Roots of a Cyclotomic Polynomial
-over Integer Ring</a></span>
+<br />   <span class='subsectionToc'>A-11.4 <a href='VandermondeMatrixwithRootsofCyclotomicPolynomialoverComplexNumbers.html#vandermonde-matrix-with-roots-of-cyclotomic-polynomial-over-complex-numbers'>Vandermonde Matrix with Roots of Cyclotomic Polynomial
+over Complex Numbers</a></span>
+<br />   <span class='subsectionToc'>A-11.5 <a href='VandermondeMatrixwithRootsofaCyclotomicPolynomialoverRingmathbbZp.html#vandermonde-matrix-with-roots-of-a-cyclotomic-polynomial-over-ring-zp'>Vandermonde Matrix with Roots of a Cyclotomic Polynomial over
+Ring (<!--  l. 69  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>ℤ</mi></mrow><mrow><mi>p</mi></mrow></msub></math>)</a></span>
 <br />   <span class='sectionToc'>A-12 <a href='ModuloRescaling.html#modulo-rescaling'>Modulo Rescaling</a></span>
 <br />   <span class='subsectionToc'>A-12.1 <a href='RescalingModuloofCongruenceRelations.html#rescaling-modulo-of-congruence-relations'>Rescaling Modulo of Congruence Relations</a></span>
 <br />   <span class='subsubsectionToc'>A-12.1.1 <a href='RescalingModuloofCongruenceRelations.html#example4' id='QQ2-49-72'>Example</a></span>
