--- a/VandermondeMatrixwithRootsofaCyclotomicPolynomialoverRingsmathbbZp.html
+++ b/VandermondeMatrixwithRootsofaCyclotomicPolynomialoverRingsmathbbZp.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html> 
 <html lang='en-US' xml:lang='en-US'> 
-<head><title>Vandermonde Matrix with Roots of a Cyclotomic Polynomial over Ring (ℤp)</title> 
+<head><title>Vandermonde Matrix with Roots of a Cyclotomic Polynomial over Rings (ℤp)</title> 
 <meta charset='utf-8' /> 
 <meta content='TeX4ht (https://tug.org/tex4ht/)' name='generator' /> 
 <meta content='width=device-width,initial-scale=1' name='viewport' /> 
@@ -8,8 +8,8 @@
 <meta content='index.tex' name='src' /> 
  <script async='async' id='MathJax-script' src='https://cdn.jsdelivr.net/npm/mathjax@3/es5/mml-chtml.js' type='text/javascript'></script>  
 </head><body>
-   <!--  l. 234  --><div class='crosslinks'><p class='noindent'>[<a href='VandermondeMatrixwithRootsofCyclotomicPolynomialoverComplexNumbers.html'>prev</a>] [<a href='VandermondeMatrixwithRootsofCyclotomicPolynomialoverComplexNumbers.html#tailVandermondeMatrixwithRootsofCyclotomicPolynomialoverComplexNumbers.html'>prev-tail</a>] [<a href='#tailVandermondeMatrixwithRootsofaCyclotomicPolynomialoverRingmathbbZp.html'>tail</a>] [<a href='EulersFormula.html#VandermondeMatrixwithRootsofaCyclotomicPolynomialoverRingmathbbZp.html'>up</a>] </p></div>
-   <h4 class='subsectionHead' id='vandermonde-matrix-with-roots-of-a-cyclotomic-polynomial-over-ring-zp'><span class='titlemark'>A-11.5   </span> <a id='x47-59000A-11.5'></a>Vandermonde Matrix with Roots of a Cyclotomic Polynomial over Ring
+   <!--  l. 234  --><div class='crosslinks'><p class='noindent'>[<a href='VandermondeMatrixwithRootsofCyclotomicPolynomialoverComplexNumbers.html'>prev</a>] [<a href='VandermondeMatrixwithRootsofCyclotomicPolynomialoverComplexNumbers.html#tailVandermondeMatrixwithRootsofCyclotomicPolynomialoverComplexNumbers.html'>prev-tail</a>] [<a href='#tailVandermondeMatrixwithRootsofaCyclotomicPolynomialoverRingsmathbbZp.html'>tail</a>] [<a href='EulersFormula.html#VandermondeMatrixwithRootsofaCyclotomicPolynomialoverRingsmathbbZp.html'>up</a>] </p></div>
+   <h4 class='subsectionHead' id='vandermonde-matrix-with-roots-of-a-cyclotomic-polynomial-over-rings-zp'><span class='titlemark'>A-11.5   </span> <a id='x47-59000A-11.5'></a>Vandermonde Matrix with Roots of a Cyclotomic Polynomial over Rings
 (<!--  l. 234  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>ℤ</mi></mrow><mrow><mi>p</mi></mrow></msub></math>)</h4>
 <!--  l. 237  --><p class='noindent'>Theorem A-11.4 (in <a href='VandermondeMatrixwithRootsofCyclotomicPolynomialoverComplexNumbers.html#vandermonde-matrix-with-roots-of-cyclotomic-polynomial-over-complex-numbers'><span class='ts1-lmr10-x-x-109'>§</span>A-11.4<!--  tex4ht:ref: subsec:vandermonde-euler   --></a>) showed that <!--  l. 237  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>V</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><msup><mrow><mi>V</mi> </mrow><mrow><mi>T</mi> </mrow></msup> <mo class='MathClass-rel' stretchy='false'>=</mo> <mi>n</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><msubsup><mrow><mi>I</mi></mrow><mrow><mi>n</mi></mrow><mrow><mi>R</mi></mrow></msubsup></mrow></math>,
 where <!--  l. 237  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>V</mi> </mrow></math> is the
@@ -200,7 +200,7 @@ power of 2:
                                                                                          
                                                                                          
 </p>
-   <!--  l. 433  --><div class='crosslinks'><p class='noindent'>[<a href='VandermondeMatrixwithRootsofCyclotomicPolynomialoverComplexNumbers.html'>prev</a>] [<a href='VandermondeMatrixwithRootsofCyclotomicPolynomialoverComplexNumbers.html#tailVandermondeMatrixwithRootsofCyclotomicPolynomialoverComplexNumbers.html'>prev-tail</a>] [<a href='VandermondeMatrixwithRootsofaCyclotomicPolynomialoverRingmathbbZp.html'>front</a>] [<a href='EulersFormula.html#VandermondeMatrixwithRootsofaCyclotomicPolynomialoverRingmathbbZp.html'>up</a>] </p></div>
-<!--  l. 433  --><p class='indent'>   <a id='tailVandermondeMatrixwithRootsofaCyclotomicPolynomialoverRingmathbbZp.html'></a> </p> 
+   <!--  l. 433  --><div class='crosslinks'><p class='noindent'>[<a href='VandermondeMatrixwithRootsofCyclotomicPolynomialoverComplexNumbers.html'>prev</a>] [<a href='VandermondeMatrixwithRootsofCyclotomicPolynomialoverComplexNumbers.html#tailVandermondeMatrixwithRootsofCyclotomicPolynomialoverComplexNumbers.html'>prev-tail</a>] [<a href='VandermondeMatrixwithRootsofaCyclotomicPolynomialoverRingsmathbbZp.html'>front</a>] [<a href='EulersFormula.html#VandermondeMatrixwithRootsofaCyclotomicPolynomialoverRingsmathbbZp.html'>up</a>] </p></div>
+<!--  l. 433  --><p class='indent'>   <a id='tailVandermondeMatrixwithRootsofaCyclotomicPolynomialoverRingsmathbbZp.html'></a> </p> 
 </body> 
 </html>
