--- a/contentsname.html
+++ b/contentsname.html
@@ -50,7 +50,7 @@
                                                                                          
                                                                                          
 <br />   <span class='subsectionToc'>A-8.2 <a href='Theorems3.html#theorems3'>Theorems</a></span>
-<br />   <span class='sectionToc'>A-9 <a href='RootsofUnityandCyclotomicPolynomialoverIntegerRing.html#roots-of-unity-and-cyclotomic-polynomial-over-integer-ring'>Roots of Unity and Cyclotomic Polynomial over Integer Ring</a></span>
+<br />   <span class='sectionToc'>A-9 <a href='RootsofUnityandCyclotomicPolynomialoverRings.html#roots-of-unity-and-cyclotomic-polynomial-over-rings'>Roots of Unity and Cyclotomic Polynomial over Rings</a></span>
 <br />   <span class='sectionToc'>A-10 <a href='VectorandMatrix.html#vector-and-matrix'>Vector and Matrix</a></span>
 <br />   <span class='subsectionToc'>A-10.1 <a href='VectorArithmetic.html#vector-arithmetic'>Vector Arithmetic</a></span>
 <br />   <span class='subsectionToc'>A-10.2 <a href='VariousTypesofMatrix.html#various-types-of-matrix'>Various Types of Matrix</a></span>
@@ -75,8 +75,8 @@
 <br />   <span class='subsectionToc'>A-11.3 <a href='EulersFormula1.html#eulers-formula1'>Euler’s Formula</a></span>
 <br />   <span class='subsectionToc'>A-11.4 <a href='VandermondeMatrixwithRootsofCyclotomicPolynomialoverComplexNumbers.html#vandermonde-matrix-with-roots-of-cyclotomic-polynomial-over-complex-numbers'>Vandermonde Matrix with Roots of Cyclotomic Polynomial
 over Complex Numbers</a></span>
-<br />   <span class='subsectionToc'>A-11.5 <a href='VandermondeMatrixwithRootsofaCyclotomicPolynomialoverRingmathbbZp.html#vandermonde-matrix-with-roots-of-a-cyclotomic-polynomial-over-ring-zp'>Vandermonde Matrix with Roots of a Cyclotomic Polynomial over
-Ring (<!--  l. 69  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>ℤ</mi></mrow><mrow><mi>p</mi></mrow></msub></math>)</a></span>
+<br />   <span class='subsectionToc'>A-11.5 <a href='VandermondeMatrixwithRootsofaCyclotomicPolynomialoverRingsmathbbZp.html#vandermonde-matrix-with-roots-of-a-cyclotomic-polynomial-over-rings-zp'>Vandermonde Matrix with Roots of a Cyclotomic Polynomial over
+Rings (<!--  l. 69  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>ℤ</mi></mrow><mrow><mi>p</mi></mrow></msub></math>)</a></span>
 <br />   <span class='sectionToc'>A-12 <a href='ModuloRescaling.html#modulo-rescaling'>Modulo Rescaling</a></span>
 <br />   <span class='subsectionToc'>A-12.1 <a href='RescalingModuloofCongruenceRelations.html#rescaling-modulo-of-congruence-relations'>Rescaling Modulo of Congruence Relations</a></span>
 <br />   <span class='subsubsectionToc'>A-12.1.1 <a href='RescalingModuloofCongruenceRelations.html#example4' id='QQ2-49-72'>Example</a></span>
