--- a/BGVScheme.html
+++ b/BGVScheme.html
@@ -51,7 +51,7 @@ BFV’s.
     </li>
     <li class='itemize'><a href='CyclotomicPolynomial.html#cyclotomic-polynomial'><span class='ts1-lmr10-x-x-109'>§</span>A-8<!--  tex4ht:ref: subsubsec:ckksbbootstrappingssummary   --></a>: <a href='CyclotomicPolynomial.html#cyclotomic-polynomial'>Cyclotomic Polynomial<!--  tex4ht:ref: sec:cyclotomic   --></a>
     </li>
-    <li class='itemize'><a href='RootsofUnityandCyclotomicPolynomialoverIntegerRing.html#roots-of-unity-and-cyclotomic-polynomial-over-integer-ring'><span class='ts1-lmr10-x-x-109'>§</span>A-9<!--  tex4ht:ref: subsubsec:ckksbbootstrappingssummary   --></a>: <a href='RootsofUnityandCyclotomicPolynomialoverIntegerRing.html#roots-of-unity-and-cyclotomic-polynomial-over-integer-ring'>Roots of Unity and Cyclotomic Polynomial over Integer Ring<!--  tex4ht:ref: sec:cyclotomicppolynomialiintegerrring   --></a>
+    <li class='itemize'><a href='RootsofUnityandCyclotomicPolynomialoverRings.html#roots-of-unity-and-cyclotomic-polynomial-over-rings'><span class='ts1-lmr10-x-x-109'>§</span>A-9<!--  tex4ht:ref: subsubsec:ckksbbootstrappingssummary   --></a>: <a href='RootsofUnityandCyclotomicPolynomialoverRings.html#roots-of-unity-and-cyclotomic-polynomial-over-rings'>Roots of Unity and Cyclotomic Polynomial over Rings<!--  tex4ht:ref: sec:cyclotomicppolynomialiintegerrring   --></a>
     </li>
     <li class='itemize'><a href='VectorandMatrix.html#vector-and-matrix'><span class='ts1-lmr10-x-x-109'>§</span>A-10<!--  tex4ht:ref: subsubsec:ckksbbootstrappingssummary   --></a>: <a href='VectorandMatrix.html#vector-and-matrix'>Vector and Matrix<!--  tex4ht:ref: sec:matrix   --></a>
     </li>
