--- a/BasicMath.html
+++ b/BasicMath.html
@@ -45,7 +45,7 @@ post-quantum cryptography.
 <br />   <span class='sectionToc'>A-8 <a href='CyclotomicPolynomial.html#cyclotomic-polynomial'>Cyclotomic Polynomial</a></span>
 <br />   <span class='subsectionToc'>A-8.1 <a href='Definitions4.html#definitions4'>Definitions</a></span>
 <br />   <span class='subsectionToc'>A-8.2 <a href='Theorems3.html#theorems3'>Theorems</a></span>
-<br />   <span class='sectionToc'>A-9 <a href='RootsofUnityandCyclotomicPolynomialoverIntegerRing.html#roots-of-unity-and-cyclotomic-polynomial-over-integer-ring'>Roots of Unity and Cyclotomic Polynomial over Integer Ring</a></span>
+<br />   <span class='sectionToc'>A-9 <a href='RootsofUnityandCyclotomicPolynomialoverRings.html#roots-of-unity-and-cyclotomic-polynomial-over-rings'>Roots of Unity and Cyclotomic Polynomial over Rings</a></span>
 <br />   <span class='sectionToc'>A-10 <a href='VectorandMatrix.html#vector-and-matrix'>Vector and Matrix</a></span>
 <br />   <span class='subsectionToc'>A-10.1 <a href='VectorArithmetic.html#vector-arithmetic'>Vector Arithmetic</a></span>
 <br />   <span class='subsectionToc'>A-10.2 <a href='VariousTypesofMatrix.html#various-types-of-matrix'>Various Types of Matrix</a></span>
@@ -63,8 +63,8 @@ post-quantum cryptography.
 <br />   <span class='subsectionToc'>A-11.3 <a href='EulersFormula1.html#eulers-formula1'>Euler’s Formula</a></span>
 <br />   <span class='subsectionToc'>A-11.4 <a href='VandermondeMatrixwithRootsofCyclotomicPolynomialoverComplexNumbers.html#vandermonde-matrix-with-roots-of-cyclotomic-polynomial-over-complex-numbers'>Vandermonde Matrix with Roots of Cyclotomic Polynomial
 over Complex Numbers</a></span>
-<br />   <span class='subsectionToc'>A-11.5 <a href='VandermondeMatrixwithRootsofaCyclotomicPolynomialoverRingmathbbZp.html#vandermonde-matrix-with-roots-of-a-cyclotomic-polynomial-over-ring-zp'>Vandermonde Matrix with Roots of a Cyclotomic Polynomial over
-Ring (<!--  l. 69  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>ℤ</mi></mrow><mrow><mi>p</mi></mrow></msub></math>)</a></span>
+<br />   <span class='subsectionToc'>A-11.5 <a href='VandermondeMatrixwithRootsofaCyclotomicPolynomialoverRingsmathbbZp.html#vandermonde-matrix-with-roots-of-a-cyclotomic-polynomial-over-rings-zp'>Vandermonde Matrix with Roots of a Cyclotomic Polynomial over
+Rings (<!--  l. 69  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>ℤ</mi></mrow><mrow><mi>p</mi></mrow></msub></math>)</a></span>
 <br />   <span class='sectionToc'>A-12 <a href='ModuloRescaling.html#modulo-rescaling'>Modulo Rescaling</a></span>
 <br />   <span class='subsectionToc'>A-12.1 <a href='RescalingModuloofCongruenceRelations.html#rescaling-modulo-of-congruence-relations'>Rescaling Modulo of Congruence Relations</a></span>
 <br />   <span class='sectionToc'>A-13 <a href='ChineseRemainderTheorem.html#chinese-remainder-theorem'>Chinese Remainder Theorem</a></span>
