--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ for Fully Homomorphic Encryption</h2>
 <br />   <span class='sectionToc'>A-8 <a href='CyclotomicPolynomial.html#cyclotomic-polynomial' id='QQ2-29-42'>Cyclotomic Polynomial</a></span>
 <br />   <span class='subsectionToc'>A-8.1 <a href='Definitions4.html#definitions4' id='QQ2-30-43'>Definitions</a></span>
 <br />   <span class='subsectionToc'>A-8.2 <a href='Theorems3.html#theorems3' id='QQ2-31-44'>Theorems</a></span>
-<br />   <span class='sectionToc'>A-9 <a href='RootsofUnityandCyclotomicPolynomialoverIntegerRing.html#roots-of-unity-and-cyclotomic-polynomial-over-integer-ring' id='QQ2-32-45'>Roots of Unity and Cyclotomic Polynomial over Integer Ring</a></span>
+<br />   <span class='sectionToc'>A-9 <a href='RootsofUnityandCyclotomicPolynomialoverRings.html#roots-of-unity-and-cyclotomic-polynomial-over-rings' id='QQ2-32-45'>Roots of Unity and Cyclotomic Polynomial over Rings</a></span>
 <br />   <span class='sectionToc'>A-10 <a href='VectorandMatrix.html#vector-and-matrix' id='QQ2-33-47'>Vector and Matrix</a></span>
 <br />   <span class='subsectionToc'>A-10.1 <a href='VectorArithmetic.html#vector-arithmetic' id='QQ2-34-48'>Vector Arithmetic</a></span>
 <br />   <span class='subsectionToc'>A-10.2 <a href='VariousTypesofMatrix.html#various-types-of-matrix' id='QQ2-35-49'>Various Types of Matrix</a></span>
@@ -74,8 +74,8 @@ for Fully Homomorphic Encryption</h2>
 <br />   <span class='subsectionToc'>A-11.3 <a href='EulersFormula1.html#eulers-formula1' id='QQ2-45-65'>Euler’s Formula</a></span>
 <br />   <span class='subsectionToc'>A-11.4 <a href='VandermondeMatrixwithRootsofCyclotomicPolynomialoverComplexNumbers.html#vandermonde-matrix-with-roots-of-cyclotomic-polynomial-over-complex-numbers' id='QQ2-46-67'>Vandermonde Matrix with Roots of Cyclotomic Polynomial
 over Complex Numbers</a></span>
-<br />   <span class='subsectionToc'>A-11.5 <a href='VandermondeMatrixwithRootsofaCyclotomicPolynomialoverRingmathbbZp.html#vandermonde-matrix-with-roots-of-a-cyclotomic-polynomial-over-ring-zp' id='QQ2-47-68'>Vandermonde Matrix with Roots of a Cyclotomic Polynomial over
-Ring (<!--  l. 69  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>ℤ</mi></mrow><mrow><mi>p</mi></mrow></msub></math>)</a></span>
+<br />   <span class='subsectionToc'>A-11.5 <a href='VandermondeMatrixwithRootsofaCyclotomicPolynomialoverRingsmathbbZp.html#vandermonde-matrix-with-roots-of-a-cyclotomic-polynomial-over-rings-zp' id='QQ2-47-68'>Vandermonde Matrix with Roots of a Cyclotomic Polynomial over
+Rings (<!--  l. 69  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>ℤ</mi></mrow><mrow><mi>p</mi></mrow></msub></math>)</a></span>
 <br />   <span class='sectionToc'>A-12 <a href='ModuloRescaling.html#modulo-rescaling' id='QQ2-48-69'>Modulo Rescaling</a></span>
 <br />   <span class='subsectionToc'>A-12.1 <a href='RescalingModuloofCongruenceRelations.html#rescaling-modulo-of-congruence-relations' id='QQ2-49-70'>Rescaling Modulo of Congruence Relations</a></span>
 <br />   <span class='sectionToc'>A-13 <a href='ChineseRemainderTheorem.html#chinese-remainder-theorem' id='QQ2-50-73'>Chinese Remainder Theorem</a></span>
