deploy: 9afe253e6d7658efb7d038484d3d70e15c7f32f2

--- a/GLev.html
+++ b/GLev.html
@@ -22,12 +22,8 @@ GLWE ciphertext uses a different plaintext scaling factor, which is:
 <!--  l. 1  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mi mathvariant='normal'>Δ</mi></mrow><mrow><mi>i</mi></mrow></msub> <mo class='MathClass-rel' stretchy='false'>=</mo> <mstyle displaystyle='true'><mfrac><mrow> <mi>q</mi>
 </mrow><mrow><msup><mrow><mi>β</mi></mrow><mrow><mi>i</mi></mrow></msup></mrow></mfrac></mstyle></mrow></math>. The
 structure of GLev ciphertext is visually depicted in <a href='Encryption3.html#an-illustration-of-a-glev-ciphertext-'>Figure 9<!--  tex4ht:ref: subsec:glweeenc   --></a>.
-</p><!--  l. 3  --><p class='indent'>   Note that <!--  l. 3  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>p</mi></math>
-<!--  l. 3  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow> <mo class='MathClass-rel' stretchy='false'>/mo&gt;</mo>
-<!--  l. 3  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>β</mi></math>
-<!--  l. 3  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'> <mo class='MathClass-rel' stretchy='false'>/mo&gt;</mo>
-<!--  l. 3  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math> should hold.
-Especially, <!--  l. 3  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>t</mi></math> should
+</p><!--  l. 3  --><p class='indent'>   Note that <!--  l. 3  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>p</mi> <mstyle class='MathClass-rel' stretchy='false'>/mo&gt; <mi>B</mi> <mstyle class='MathClass-rel' stretchy='false'>/mo&gt; <mi>q</mi></mstyle> should
+hold. Especially, <!--  l. 3  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>t</mi></math> should
 be smaller than <!--  l. 3  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>β</mi></math>,
 because if <!--  l. 3  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>p</mi> <mstyle class='MathClass-rel' stretchy='false'>/mo&gt; <mi>β</mi></mstyle>, then the
 higher bits of <!--  l. 3  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>M</mi></math> will
@@ -35,7 +31,7 @@ overflow beyond <!--  l. 3  --><math display='inline' xmlns='http://www.w3.org/1
 after computing <!--  l. 3  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle displaystyle='true'><mfrac><mrow> <mi>q</mi>
 </mrow><mrow><msup><mrow><mi>β</mi></mrow><mrow><mn>1</mn></mrow></msup></mrow></mfrac></mstyle><mi>M</mi></math>.
    
-</mrow></math></math></mrow></math></p>
+<p></p></mrow></math>
    <div class='subsectionTOCS hrr'>
 <br />   <span class='subsectionToc'>B-5.1 <a href='Encryption3.html#encryption3'>Encryption</a></span>
 <br />   <span class='subsectionToc'>B-5.2 <a href='Decryption3.html#decryption3'>Decryption</a></span>
@@ -48,5 +44,5 @@ after computing <!--  l. 3  --><math display='inline' xmlns='http://www.w3.org/1
                                                                                          
    <!--  l. 531  --></p><div class='crosslinks'><p class='noindent'>[<a href='GLWECryptosystem.html'>prev</a>][<a href='PostquantumCryptography.html#GLev.html'>parent</a>][<a href='GGSW.html'>next</a>]</p></div>
     
-</body> 
-</html>
+</mstyle> 
+</mrow></math></p></body></html>
