--- a/GLev.html
+++ b/GLev.html
@@ -22,23 +22,24 @@ GLWE ciphertext uses a different plaintext scaling factor, which is:
 <!--  l. 1  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mi mathvariant='normal'>Δ</mi></mrow><mrow><mi>i</mi></mrow></msub> <mo class='MathClass-rel' stretchy='false'>=</mo> <mstyle displaystyle='true'><mfrac><mrow> <mi>q</mi>
 </mrow><mrow><msup><mrow><mi>β</mi></mrow><mrow><mi>i</mi></mrow></msup></mrow></mfrac></mstyle></mrow></math>. The
 structure of GLev ciphertext is visually depicted in <a href='Encryption3.html#an-illustration-of-a-glev-ciphertext-'>Figure 9<!--  tex4ht:ref: subsec:glweeenc   --></a>.
-</p><!--  l. 3  --><p class='indent'>   Note that <!--  l. 3  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>p</mi> <mstyle class='MathClass-rel' stretchy='false'>/mo&gt; <mi>β</mi></mstyle>
-and <!--  l. 3  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>β</mi> <mstyle class='MathClass-rel' stretchy='false'>/mo&gt; <mi>q</mi></mstyle> should hold.
-Especially, <!--  l. 3  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>t</mi></math> should
-be smaller than <!--  l. 3  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>β</mi></math>,
-because if <!--  l. 3  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>p</mi> <mstyle class='MathClass-rel' stretchy='false'>/mo&gt; <mi>β</mi></mstyle>, then the
-higher bits of <!--  l. 3  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>M</mi></math> will
-overflow beyond <!--  l. 3  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>
-after computing <!--  l. 3  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle displaystyle='true'><mfrac><mrow> <mi>q</mi>
+</p><!--  l. 4  --><p class='indent'>   Note that <!--  l. 4  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>β</mi></math> should
+be some value between <!--  l. 4  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>p</mi></math>
+and <!--  l. 4  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>. Especially,
+<!--  l. 5  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>t</mi></math> should be smaller
+than <!--  l. 5  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>β</mi></math>, because
+if <!--  l. 5  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>p</mi> <mstyle class='MathClass-rel' stretchy='false'>/mo&gt; <mi>β</mi></mstyle>, then the higher
+bits of <!--  l. 5  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>M</mi></math> will
+overflow beyond <!--  l. 5  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>
+after computing <!--  l. 5  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle displaystyle='true'><mfrac><mrow> <mi>q</mi>
 </mrow><mrow><msup><mrow><mi>β</mi></mrow><mrow><mn>1</mn></mrow></msup></mrow></mfrac></mstyle><mi>M</mi></math>.
    
-</mrow></math></math></mrow></math></p>
+</mrow></math></p>
    <div class='subsectionTOCS hrr'>
 <br />   <span class='subsectionToc'>B-5.1 <a href='Encryption3.html#encryption3'>Encryption</a></span>
 <br />   <span class='subsectionToc'>B-5.2 <a href='Decryption3.html#decryption3'>Decryption</a></span>
 <br />   <span class='subsectionToc'>B-5.3 <a href='LevandRLev.html#lev-and-rlev'>Lev and RLev</a></span>
    </div>
-<!--  l. 5  --><p class='indent'>   
+<!--  l. 7  --><p class='indent'>   
 
 
                                                                                          
