deploy: 114f239d4ac93a6912092f6bca82506afeecd8b2

--- a/GLev.html
+++ b/GLev.html
@@ -25,15 +25,16 @@ structure of GLev ciphertext is visually depicted in <a href='Encryption3.html#a
 </p><!--  l. 4  --><p class='indent'>   Note that <!--  l. 4  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>β</mi></math> should
 be some value between <!--  l. 4  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>p</mi></math>
 and <!--  l. 4  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>. Especially,
-<!--  l. 5  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>t</mi></math> should be smaller
-than <!--  l. 5  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>β</mi></math>, because
-if <!--  l. 5  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>p</mi> <mstyle class='MathClass-rel' stretchy='false'>/mo&gt; <mi>β</mi></mstyle>, then the higher
-bits of <!--  l. 5  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>M</mi></math> will
-overflow beyond <!--  l. 5  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>
-after computing <!--  l. 5  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle displaystyle='true'><mfrac><mrow> <mi>q</mi>
-</mrow><mrow><msup><mrow><mi>β</mi></mrow><mrow><mn>1</mn></mrow></msup></mrow></mfrac></mstyle><mi>M</mi></math>.
+<!--  l. 4  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>t</mi></math> should be smaller
+than <!--  l. 4  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>β</mi></math>, because
+if <!--  l. 4  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>p</mi></math> is greater than
+<!--  l. 4  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>β</mi></math>, then the higher
+bits of <!--  l. 4  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>M</mi></math> will
+overflow beyond <!--  l. 4  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>
+after computing <!--  l. 4  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mstyle displaystyle='true'><mfrac><mrow> <mi>q</mi>
+</mrow><mrow><msup><mrow><mi>β</mi></mrow><mrow><mn>1</mn></mrow></msup></mrow></mfrac></mstyle><mi>M</mi></mrow></math>.
    
-</mrow></math></p>
+</p>
    <div class='subsectionTOCS hrr'>
 <br />   <span class='subsectionToc'>B-5.1 <a href='Encryption3.html#encryption3'>Encryption</a></span>
 <br />   <span class='subsectionToc'>B-5.2 <a href='Decryption3.html#decryption3'>Decryption</a></span>
