deploy: 83ae6488f9a3eb5effa4edc1b5f6f8574ffee111

--- a/BasicMath.html
+++ b/BasicMath.html
@@ -68,7 +68,7 @@ Rings (<!--  l. 69  --><math display='inline' xmlns='http://www.w3.org/1998/Math
 <br />   <span class='sectionToc'>A-12 <a href='ModuloRescaling.html#modulo-rescaling'>Modulo Rescaling</a></span>
 <br />   <span class='subsectionToc'>A-12.1 <a href='RescalingModuloofCongruenceRelations.html#rescaling-modulo-of-congruence-relations'>Rescaling Modulo of Congruence Relations</a></span>
 <br />   <span class='sectionToc'>A-13 <a href='ChineseRemainderTheorem.html#chinese-remainder-theorem'>Chinese Remainder Theorem</a></span>
-<br />   <span class='subsectionToc'>A-13.1 <a href='ApplicationNumberResidueSystemRNS.html#application-number-residue-system-rns'>Application: Number Residue System (RNS)</a></span>
+<br />   <span class='subsectionToc'>A-13.1 <a href='ApplicationResidueNumberSystemRNS.html#application-residue-number-system-rns'>Application: Residue Number System (RNS)</a></span>
 <br />   <span class='sectionToc'>A-14 <a href='TaylorSeries.html#taylor-series'>Taylor Series</a></span>
 <br />   <span class='sectionToc'>A-15 <a href='LagrangesPolynomialInterpolation.html#lagranges-polynomial-interpolation'>Lagrange’s Polynomial Interpolation</a></span>
 <br />   <span class='sectionToc'>A-16 <a href='EfficientPolynomialMultiplicationbyFFTandNTT.html#efficient-polynomial-multiplication-by-fft-and-ntt'>Efficient Polynomial Multiplication by FFT and NTT</a></span>
