--- a/ChineseRemainderTheorem.html
+++ b/ChineseRemainderTheorem.html
@@ -174,7 +174,7 @@ and <!--  l. 37  --><math display='inline' xmlns='http://www.w3.org/1998/Math/Ma
                                                                                          
    
    <div class='subsectionTOCS hrr'>
-<br />   <span class='subsectionToc'>A-13.1 <a href='ApplicationNumberResidueSystemRNS.html#application-number-residue-system-rns'>Application: Number Residue System (RNS)</a></span>
+<br />   <span class='subsectionToc'>A-13.1 <a href='ApplicationResidueNumberSystemRNS.html#application-residue-number-system-rns'>Application: Residue Number System (RNS)</a></span>
    </div>
 <!--  l. 121  --><p class='indent'>   
                                                                                          
