--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ Rings (<!--  l. 69  --><math display='inline' xmlns='http://www.w3.org/1998/Math
 <br />   <span class='sectionToc'>A-12 <a href='ModuloRescaling.html#modulo-rescaling' id='QQ2-48-69'>Modulo Rescaling</a></span>
 <br />   <span class='subsectionToc'>A-12.1 <a href='RescalingModuloofCongruenceRelations.html#rescaling-modulo-of-congruence-relations' id='QQ2-49-70'>Rescaling Modulo of Congruence Relations</a></span>
 <br />   <span class='sectionToc'>A-13 <a href='ChineseRemainderTheorem.html#chinese-remainder-theorem' id='QQ2-50-73'>Chinese Remainder Theorem</a></span>
-<br />   <span class='subsectionToc'>A-13.1 <a href='ApplicationNumberResidueSystemRNS.html#application-number-residue-system-rns' id='QQ2-51-74'>Application: Number Residue System (RNS)</a></span>
+<br />   <span class='subsectionToc'>A-13.1 <a href='ApplicationResidueNumberSystemRNS.html#application-residue-number-system-rns' id='QQ2-51-74'>Application: Residue Number System (RNS)</a></span>
 <br />   <span class='sectionToc'>A-14 <a href='TaylorSeries.html#taylor-series' id='QQ2-52-75'>Taylor Series</a></span>
 <br />   <span class='sectionToc'>A-15 <a href='LagrangesPolynomialInterpolation.html#lagranges-polynomial-interpolation' id='QQ2-53-76'>Lagrange’s Polynomial Interpolation</a></span>
 <br />   <span class='sectionToc'>A-16 <a href='EfficientPolynomialMultiplicationbyFFTandNTT.html#efficient-polynomial-multiplication-by-fft-and-ntt' id='QQ2-54-77'>Efficient Polynomial Multiplication by FFT and NTT</a></span>
