deploy: 6272ee84ce0fcd193aa6af41b68068562a9107d9

--- a/Preface.html
+++ b/Preface.html
@@ -65,8 +65,9 @@ draft.
 <!--  l. 299  --><p class='indent'>   
 </p>
    <h5 class='likesubsubsectionHead' id='acknowledgments'><a id='x2-2000'></a>Acknowledgments</h5>
-<!--  l. 300  --><p class='noindent'>Special thanks are extended to Robin Geelen (KU Leuven) for his thoughtful and dedicated comments,
-and to Yongwoo Lee (Inha University) for his general advice.
+<!--  l. 300  --><p class='noindent'>Special thanks go to the following individuals: Robin Geelen (KU Leuven), for his thoughtful and
+dedicated feedback; Yongwoo Lee (Inha University), for his general advice; and Tianjian Yang (Peking
+University), for correcting numerous typos and other errors in the draft.
 </p><!--  l. 304  --><p class='indent'>
                                                                                          
                                                                                          
