deploy: d36e79ff5623dc3f84a4a250080849a22995160b

--- a/GadgetDecompositionforNoiseSuppression.html
+++ b/GadgetDecompositionforNoiseSuppression.html
@@ -70,7 +70,7 @@ the final noise of the ciphertext-to-plaintext multiplication is
   </mrow><mrow><mi>i</mi><mo class='MathClass-rel' stretchy='false'>=</mo><mn>1</mn></mrow><mrow><mi>l</mi></mrow></munderover><msub><mrow><mi mathvariant='normal'>Λ</mi></mrow><mrow><mi>i</mi></mrow></msub> <mo class='MathClass-bin' stretchy='false'>⋅</mo><msub><mrow><mi>E</mi></mrow><mrow><mi>i</mi></mrow></msub></mrow></math>, which is much smaller than
 <!--  l. 111  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi mathvariant='normal'>Λ</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mi>E</mi></mrow></math> (because the coefficients of each
 decomposed polynomial <!--  l. 111  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi mathvariant='normal'>Λ</mi></mrow><mrow><mi>i</mi></mrow></msub></math> are
-much smaller than those of <!--  l. 111  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi mathvariant='normal'>Λ</mi></math>).
+significantly smaller than those of <!--  l. 111  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi mathvariant='normal'>Λ</mi></math>).
 </p><!--  l. 113  --><p class='indent'>   However, we cannot use this decomposition technique to the resulting ciphertext again, because the
 output of this algorithm is a GLWE ciphertext and converting it into a GLev ciphertext without
 decrypting it costs much noise and computation time (as we need to multiply the GLWE ciphertext by
