--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ for Fully Homomorphic Encryption</h2>
     <div class='author'><span class='rm-lmbx-12'>Ronny Ko</span>
 <br /> <span class='rm-lmr-12'>LG Electronics Inc.</span></div><br />
 <div class='date'><span class='rm-lmr-12'>January 1, 2025</span></div>
-   <div class='thanks'><br /><a id='tk-1'></a><span class='thank-mark'><span class='ts1-lmr10-x-x-109'>∗</span></span><span class='rm-lmbxi-10x-x-120'>Acknowledgments</span><span class='rm-lmri-12'>: </span><span class='rm-lmbx-12'>Robin Geelen </span><span class='rm-lmr-12'>(KU Leuven); </span><span class='rm-lmbx-12'>Tianjian Yang </span><span class='rm-lmr-12'>(Peking University);
+   <div class='thanks'><br /><a id='tk-1'></a><span class='thank-mark'><span class='ts1-lmr10-x-x-109'>∗</span></span><span class='rm-lmri-12'>Acknowledgments: </span><span class='rm-lmbx-12'>Robin Geelen </span><span class='rm-lmr-12'>(KU Leuven); </span><span class='rm-lmbx-12'>Tianjian Yang </span><span class='rm-lmr-12'>(Peking University);
 </span><span class='rm-lmbx-12'>Yongwoo Lee </span><span class='rm-lmr-12'>(Inha University).</span></div></div>
                                                                                          
                                                                                          
