--- a/Discussion.html
+++ b/Discussion.html
@@ -59,7 +59,7 @@ starts to contaminate the scaled plaintext bits. This violation of error bound o
 grows too much over homomorphic operations, or the ciphertext modulus
 <!--  l. 81  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math> is not sufficiently larger
 than the plaintext modulus <!--  l. 81  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>t</mi></math>.
-If <!--  l. 81  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>q</mi> <mo class='MathClass-rel' stretchy='false'>»</mo><mi>t</mi></mrow></math>, the scheme can
+If <!--  l. 81  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>q</mi> <mo class='MathClass-rel' stretchy='false'>≫</mo><mi>t</mi></mrow></math>, the scheme can
 take on a big <!--  l. 81  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi mathvariant='italic'>𝑘𝑡</mi></mrow></math>
 value (i.e., the plaintext value can wrap around the plaintext modulus
 <!--  l. 81  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>t</mi></math>
