--- a/EncryptionandDecryption1.html
+++ b/EncryptionandDecryption1.html
@@ -28,7 +28,7 @@ Thus, BFV’s encryption and decryption formulas are as follows:
 </p><!--  l. 302  --><p class='noindent'>, where plaintext modulus <!--  l. 302  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>t</mi></math>
 is either a prime (<!--  l. 302  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>p</mi></math>)
 or a power of prime (<!--  l. 302  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msup><mrow><mi>p</mi></mrow><mrow><mi>r</mi></mrow></msup></math>),
-and ciphertext modulus <!--  l. 302  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>q</mi> <mo class='MathClass-rel' stretchy='false'>»</mo><mi>t</mi></mrow></math>.
+and ciphertext modulus <!--  l. 302  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>q</mi> <mo class='MathClass-rel' stretchy='false'>≫</mo><mi>t</mi></mrow></math>.
 As for the coefficients of polynomial <!--  l. 302  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>S</mi></math>,
 they can be either binary (i.e., <!--  l. 302  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>{</mo><mn>0</mn><mo class='MathClass-punc' stretchy='false'>,</mo><mn>1</mn><mo class='MathClass-close' stretchy='false'>}</mo></mrow></math>)
 or ternary (i.e., <!--  l. 302  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>{</mo><mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn><mo class='MathClass-punc' stretchy='false'>,</mo><mn>0</mn><mo class='MathClass-punc' stretchy='false'>,</mo><mn>1</mn><mo class='MathClass-close' stretchy='false'>}</mo></mrow></math>).
