--- a/NoiseBootstrapping.html
+++ b/NoiseBootstrapping.html
@@ -167,7 +167,7 @@ is a very big number, and it is computationally infeasible to manage a
 polynomial. Thus, in practice, we instead use a much smaller polynomial
 <!--  l. 611  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>V</mi> <mo class='MathClass-open' stretchy='false'>(</mo><mi>X</mi><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math> whose degree is only
 <!--  l. 611  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>n</mi> <mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></math>. Remember that according
-to our TFHE setup, <!--  l. 611  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>n</mi> <mo class='MathClass-rel' stretchy='false'>«</mo><mi>q</mi></mrow></math>.
+to our TFHE setup, <!--  l. 611  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>n</mi> <mo class='MathClass-rel' stretchy='false'>≪</mo><mi>q</mi></mrow></math>.
 Therefore, we need a way to <span class='rm-lmri-10x-x-109'>compress </span>the big ciphertext space
 <!--  l. 611  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi mathvariant='normal'>Δ</mi><mi>m</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>e</mi> <mo class='MathClass-rel' stretchy='false'>∈</mo> <msub><mrow><mi>ℤ</mi></mrow><mrow><mi>q</mi></mrow></msub></mrow></math> into a much smaller space
 <!--  l. 611  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>ℤ</mi></mrow><mrow><mi>n</mi></mrow></msub></math> and encode the compressed
