--- a/RNSbasedModRaisetextsfModRaisetextsubscriptRNS.html
+++ b/RNSbasedModRaisetextsfModRaisetextsubscriptRNS.html
@@ -15,7 +15,7 @@
 </p><!--  l. 126  --><p class='indent'>   <span class='rm-lmss-10x-x-109'>ModRaise </span>is an operation of raising a ciphertext’s modulus from
 <!--  l. 126  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math> to
 <!--  l. 126  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi mathvariant='italic'>𝑞𝑏</mi></mrow></math> (where
-<!--  l. 126  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>q</mi> <mo class='MathClass-rel' stretchy='false'>«</mo><mi mathvariant='italic'>𝑞𝑏</mi></mrow></math>). We
+<!--  l. 126  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>q</mi> <mo class='MathClass-rel' stretchy='false'>≪</mo><mi mathvariant='italic'>𝑞𝑏</mi></mrow></math>). We
 used <span class='rm-lmss-10x-x-109'>ModRaise </span>in BFV’s ciphertext-to-ciphertext multiplication (Summary D-2.7.5 in <a href='CiphertexttoCiphertextMultiplication.html#summary1'><span class='ts1-lmr10-x-x-109'>§</span>D-2.7.5<!--  tex4ht:ref: subsubsec:bfv-mult-cipher-summary   --></a>) and in
 CKKS’s modulus bootstrapping (Summary D-3.13.7 in <a href='ModulusBootstrapping.html#summary5'><span class='ts1-lmr10-x-x-109'>§</span>D-3.13.7<!--  tex4ht:ref: subsubsec:ckks-bootstrapping-summary   --></a>). The RNS-based <span class='rm-lmss-10x-x-109'>ModRaise </span>operation is
 designed as follows:
